# Quaternion

./: CMakeLists.txt
include/: quat_class.h
src/: main.cpp  quat_class.cpp
tests/: test.cpp
